package com.bob.projects.sampledatamodel.model.enumeration;

public enum ProductCategoryEnum {
    ELECTRONIC_DEVICES,
    HEALTH_AND_BEAUTY,
    ACCESSORIES,
    STYLE_AND_FASHION,
    HOME_AND_GARDEN,
    CHILDREN_AND_INFANTS,
    PET_AND_PET_SUPPLIES

}
